# foreign-linux

./: .gitignore  Build.lua  CMakeLists.txt  README.md  _build.cmd  _build_clang.cmd  _build_msvc.cmd  _open.cmd  _open_msvc.cmd  cmake-3.31.4.cmd  flinux.cmd
lib/: makelib.cmd  ntdll.def  ntdll.lib
src/: datetime.c  datetime.h  heap.c  log.c  log.h  main.c  msvcmacro.h  ntdll.h  shared.c  version.h  vsprintf.c  vsscanf.c
src/common/: sigcontext.h  signal.h  stat.h  time.h  types.h
src/dbt/: cpuid.c  cpuid.h  x86.c  x86_inst.h
src/fs/: console.c  console.h  dsp.c  dsp.h  epollfd.c  eventfd.c  file.h  inotify.c  null.h  pipe.c  procfs.c  random.c  random.h  socket.c  virtual.c  virtual.h  winfs.c  zero.h
src/rc/: flinux.rc
src/syscall/: exec.c  fork.c  futex.c  mm.c  mm.h  process.c  process_info.h  sig.c  sig.h  syscall.c  syscall.h  syscall_dispatch.c  syscall_table_x86.h  timer.c  tls.c  vfs.c
tools/: .gitignore
